# InfinityLoop

./: .gitattributes  .gitignore  .tauriignore  backgrounds.js  index.html  package-lock.json  package.json  script.js  style.css
scripts/: build-release.ps1  create-icon.ps1  prepare-frontend.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/mpv/portable_config/: input.conf
src-tauri/src/: lib.rs  main.rs
