[package]
name = "infinity-loop"
version = "0.1.0"
description = "InfinityLoop Windows 本地播放器"
authors = ["InfinityLoop"]
edition = "2021"

[lib]
name = "infinity_loop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-ico"] }
rfd = "0.15"
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_UI_WindowsAndMessaging"
] }
